# soccer-video

./: .git_last_push_log.txt  .gitattributes  .gitignore  02_detect_events.py  03_motion_zoom.py  03_shrink_highlights.py  03_smart_shrink.py  04_make_highlights.py  05_filter_by_motion.py  05_make_social_reel.sh  05b_filter_action_cv.py  06_detect_goal_resets.py  07_force_goals.py  07_merge_csv.py  08b_build_top10_cheers.py  09_split_inplay.py  10_rank_highlights.py  AUDIT_REPORT.md  AUDIT_portrait_framing.md  Add-TSCOpener.ps1  AtomicClips.All.csv  AtomicClips.Manifest.csv  AtomicClips.Manifest.json  AtomicClips.MissingByStage.csv  AtomicClips.MissingReport.csv  AtomicClips.Status.csv  AtomicClips.Status.json  AtomicClips.Todo.csv  Audit-AtomicClips.ps1  Build-AtomicIndex.ps1  Build-TSCOpenersFromFolder.ps1  Debug.BrandedFiles.csv  Find-And-PromoteBrandedOrphans.ps1  FolderRegex.ps1  Harvest-Targets.ps1  Make-AtomicClipsSnapshot.ps1  New-TSCOpeningTitle.ps1  Normalize-DottedTimestamps.ps1  Normalize-Placeholders.ps1  OutTidyAndReport.ps1  (+305 more)
.claude/: settings.local.json
_archive_scripts/: __VARSOUT__  _analyze_jitter_v15.py  _analyze_original.py  _analyze_v11.py  _analyze_v22l.py  _apply_curation.py  _build_optflow_v2.py  _build_optflow_v3.py  _camera_analysis.pkl  _check_anchors3.py  _check_centroid_at_false.py  _check_cuda.py  _check_optflow_restart.py  _cleanup_portrait_reels.py  _cleanup_root_scripts.py  _compare_all.py  _compare_v15.py  _compare_v16.py  _compare_v17.py  _compare_v22c_v22d.py  _compare_v22d_v22e.py  _composite.py  _detect_jitter_v17.py  _diag_summary.py  _diagnose_early_jitter.py  _diagnose_phantom.py  _extract_debug.py  _filter_phantoms.py  _generate_review.py  _inject_and_smooth_v16.py  _inject_optflow.py  _inject_optflow_v3.py  _inject_optflow_v3_data.py  _inject_v16.py  _inject_v17.py  _launch_render.py  _list_tiny.py  _make_thumbnails.py  _make_tiny_audit.py  _p0a.py  (+48 more)
_debug_tiny/: src_f0030.b64
_optflow_track/: build_log.txt  build_v2_log.txt  optflow_ball_path.jsonl  optflow_ball_path_v2.jsonl  render_log.txt  render_v3_log.txt  v2_log.txt
_tmp/: analyze_004_result.txt  apply_render_004_result.txt  apply_render_004_v3_result.txt  apply_render_005_result.txt  batch_greenwood_0221_result.txt  batch_render_result.txt  batch_render_stderr.txt  batch_status.txt  batch_test.py  build_review_csv_result.txt  cleanup_003_result.txt  clip017.trf  debug_glob.py  dense_review_004_result.txt  diagnose_004_result.txt  extract_anchors_result.txt  extract_anchors_v2_result.txt  extract_anchors_v3_result.txt  extract_anchors_v4_result.txt  final_report.txt  (+140 more)
(+327 files in other folders)
