[metadata]
name = soccer-highlights
version = 0.1.0

[options]
packages = find:
install_requires =
    loguru
    pydantic>=1.10
    PyYAML
    tqdm
    numpy
    opencv-python
    librosa
python_requires = >=3.9

[options.extras_require]
dev =
    pytest

[options.entry_points]
console_scripts =
    soccerhl = soccer_highlights.cli:main
